# rak-car

./: .clang-format  .gitignore  1 hanoi.py  1.py  10.py  11.py  3camp.py  4 eject.py  5 hanoi2.py  6hanno.py  7.py  8.py  9.py  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  all.py  api.md  bmi.py  car_start.py  car_start_2026.py  car_task_function.py  car_test.py  car_wrap.py  car_wrap_2026.py  collect_data.py  config_car.yml  config_mission.yml.example  config_sensors.yml  debug-controller-download-stuck.md  debug-mc602-download-stuck.md  det.py  ecosystem.config.js  food.py  food2.py  grab.py  important_car.py  lanetext.py  location.py  (+11 more)
.dbg/: mc602-download-stuck.env  trae-debug-log-mc602-download-stuck.ndjson
.devcontainer/: devcontainer.json  postCreate.sh
deploy/: install.sh  ros_env.sh
docs/: PHASE1_HARDWARE_DRIVER_STATUS.md  README.md  REFERENCE-PACKAGE.md  architecture.md  arm-system.md  camera-system.md  claude-code-workflow.md  config-reference.md  driver-app-interface.md  file-structure.md  hardware-comm.md  hardware-port-mapping.md  inference-system.md  known-issues.md  llm-integration.md  qqq-control-layers.md  realtime_lane_state_handoff.md  ros-analysis.md  system-environment.md  task-system.md  team-constants.md  vehicle-system.md
ernie_bot/: __init__.py
hardware-mapping-doc/: FOR_GITHUB_ISSUE.md  代码文件与MC602硬件接口对应表.md
main/: 111.py  333.py  5.py  9.py  API.md  API_REFERENCE.md  BUSINESS_API_GUIDE.md  CAPABILITY_LIST.md  README.md  aaa.py  angle.py  api_client.py  bbb.py  boot_old.sh  boot_py.sh  car_start_api.py  curl_examples.sh  finalall.py  grab.py  lane_outer_loop.py  main.py  qqq.py  quick_start.py  requirements.txt  scripy1.py  scripy2.py  scripy3.py  scripy4.py  scripy5.py  settings.py  te.py  test.py  ws_client.py  ws_monitor_tui.py
ros2_ws/src/vehicle_wbt_platform/: package.xml  setup.cfg  setup.py
ros2_ws/src/vehicle_wbt_platform/test/: conftest.py  test_chassis_base.py  test_component_base.py  test_config_loader.py  test_mc602_adapter.py  test_orchestrator.py  test_package.py
ros2_ws/src/vehicle_wbt_platform/vehicle_wbt_platform/: __init__.py  __main__.py  chassis_base.py  component_base.py  config_loader.py  controller_base.py  mc602_adapter.py  orchestrator.py
ros2_ws/src/vehicle_wbt_platform_cpp/: CMakeLists.txt  package.xml  plugin.xml
ros2_ws/src/vehicle_wbt_platform_cpp/config/: cyclonedds.xml  safety.yaml  team_cameras.rviz
ros2_ws/src/vehicle_wbt_platform_cpp/include/vehicle_wbt_platform_cpp/: base_chassis.hpp  base_controller.hpp  base_task.hpp  mc602_adapter.hpp  mc602_hardware_interface.hpp  mecanum_chassis.hpp  safety_gate_logic.hpp  task_registry.hpp
ros2_ws/src/vehicle_wbt_platform_cpp/launch/: dev_all.launch.py  full_system.launch.py  mock_system.launch.py  vehicle_wbt_platform.launch.py
ros2_ws/src/vehicle_wbt_platform_cpp/msg/: ActuatorState.msg  CameraMeta.msg  DetectionArray.msg  LaneResult.msg
ros2_ws/src/vehicle_wbt_platform_cpp/params/: .gitkeep  camera_arm.yaml  camera_front.yaml
ros2_ws/src/vehicle_wbt_platform_cpp/src/: arm_node.cpp  camera_node.cpp  infrared_node.cpp  mc602_adapter.cpp  mc602_hardware_interface.cpp  mecanum_chassis.cpp  mecanum_chassis_node.cpp  mission_runner_node.cpp  safety_gate_node.cpp  seeding_task.cpp  task_registry.cpp
ros2_ws/src/vehicle_wbt_platform_cpp/test/: test_base_controller_iface.cpp  test_base_task.cpp  test_mc602_adapter.cpp  test_mecanum_chassis.cpp  test_safety_gate_logic.cpp
ros2_ws/src/vehicle_wbt_platform_cpp/urdf/: README.md  vehicle_wbt.rviz  vehicle_wbt.urdf.xacro
ros2_ws/src/vehicle_wbt_smartcar_bridge/: package.xml  setup.py
ros2_ws/src/vehicle_wbt_smartcar_bridge/config/: mc602_ports.yaml
ros2_ws/src/vehicle_wbt_smartcar_bridge/launch/: mc602.launch.py  smartcar_bridge.launch.py
ros2_ws/src/vehicle_wbt_smartcar_bridge/script/: chassis_kinematics_node  mc602_node  mc602_peripheral_node  smartcar_bridge_node  software_beep_node
ros2_ws/src/vehicle_wbt_smartcar_bridge/test/: test_mc602_peripheral_node.py  test_sdk_imports.py
ros2_ws/src/vehicle_wbt_smartcar_bridge/vehicle_wbt_smartcar_bridge/: __init__.py  arm_service.py  chassis_kinematics_node.py  chassis_service.py  config.py  mc602_node.py  mc602_peripheral_node.py  peripheral_service.py  smartcar_bridge_node.py  software_beep_node.py  state_publisher.py
ros2_ws/src/vehicle_wbt_smartcar_hw/: package.xml  setup.py
ros2_ws/src/vehicle_wbt_smartcar_hw/test/: test_mc602_frames.py
ros2_ws/src/vehicle_wbt_smartcar_hw/vehicle_wbt_smartcar_hw/: __init__.py  arm.py  arm_cfg.yaml  mc602.py  mc602_ctl2.py  odometry.py  serial.py
ros2_ws/src/vehicle_wbt_smartcar_msgs/: CMakeLists.txt  package.xml
ros2_ws/src/vehicle_wbt_smartcar_msgs/msg/: ArmPose.msg  BridgeStatus.msg  ButtonEvent.msg  ChassisState.msg  Melody.msg  MelodyNote.msg  RawState.msg
ros2_ws/src/vehicle_wbt_smartcar_msgs/srv/: ArmGrasp.srv  ArmMoveX.srv  ArmMoveY.srv  ArmReset.srv  ArmSetArmAngle.srv  ArmSetHandAngle.srv  ArmSetPose.srv  Beep.srv  Buzzer.srv  LaneBase.srv  LaneDis.srv  LaneDisOffset.srv  LaneTime.srv  MoveDistance.srv  MoveFor.srv  MoveTime.srv  MoveToPosition.srv  PlayPredefined.srv  ReadAmbient.srv  ReadAnalog.srv  ReadBattery.srv  ReadBluetooth.srv  ReadEncoders.srv  ReadIR.srv  ReadKey4.srv  ReadTouch.srv  ReadUltrasonic.srv  ResetOdometry.srv  SetDcMotor.srv  SetDout.srv  SetLed.srv  SetNixie.srv  SetServoBus.srv  SetServoPwm.srv  SetStepper.srv  SetStorage.srv  SetWheels.srv  Shoot.srv  ShowScreen.srv
ros2_ws/src/vehicle_wbt_smartcar_sdk/: package.xml  setup.py
ros2_ws/src/vehicle_wbt_smartcar_sdk/vehicle_wbt_smartcar_sdk/: __init__.py  arm.py  chassis.py  my_car.py  peripheral.py  utils.py
runtime/: README.md  STREAM_API.md  VISION_API.md  requirements.txt  server.py
scripts/: README.md  calibrate_camera.py  check_link.sh  dev.sh  diagnose.sh  onboard.sh  probe_all.sh  probe_p_ports.sh  quick_beep.sh  start_team_rviz.sh  watch_board_key.sh  watch_key4.sh
smartcar/: __init__.py
test/: OPERATION_GUIDE.md  PROTOCOL_NOTES.md  README.md  run_controller_lab.py
tests/: conftest.py  (+1 more)
(+198 files in other folders)
