<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vehicle_wbt_platform_cpp</name>
  <version>0.1.0</version>
  <description>C++ core of vehicle_wbt Platform — controller adapters, chassis kinematics, ros2_control plugins, custom messages. Python orchestration lives in vehicle_wbt_platform.</description>
  <maintainer email="thecnfor@users.noreply.github.com">Thecnfor</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>rcpputils</depend>
  <depend>diagnostic_msgs</depend>
  <depend>camera_info_manager</depend>
  <!-- OpenCV 4.x: provided by system libopencv-dev (NOT a ros-humble deb).
       If you build from source on a fresh image, install it via apt:
         sudo apt install libopencv-dev
       find_package(OpenCV) in CMakeLists resolves it. -->

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_cmake_gmock</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cmake_clang_format</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <plugin>vehicle_wbt_platform_cpp/plugin.xml</plugin>
  </export>
</package>
