<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vehicle_wbt_smartcar_hw</name>
  <version>0.1.0</version>
  <description>
    Hardware protocol layer for rak-car MC602 controller. Pure Python,
    pyserial-backed. Mirrors the official Baidu SmartCar 2026 SDK
    mc602_ctl2.py API surface 1:1 (Buzzer_2, ServoPwm, PoutD).
  </description>
  <maintainer email="w5555wdnmd@gmail.com">Thecnfor</maintainer>
  <license>Proprietary</license>

  <exec_depend>pyserial</exec_depend>
  <exec_depend>python3-serial</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>