<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vehicle_wbt_smartcar_msgs</name>
  <version>0.1.0</version>
  <description>
    ROS2 message and service definitions for the smartcar-bridge layer.
    Mirrors the public API surface of the official Baidu SmartCar 2026
    MyCar class (car_wrap_2026.py): chassis motion, lane-follow,
    arm control, peripherals.

    All services live under /vehicle_wbt/v1/cmd/...; all state messages
    represent /vehicle_wbt/v1/state/... topics.
  </description>
  <maintainer email="w5555wdnmd@gmail.com">Thecnfor</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>builtin_interfaces</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>